<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:background="@color/background_app"
    tools:context="com.peacecorps.pcsa.safety_tools.SafetyToolsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/primary_text_default_material_dark"
            android:textSize="@dimen/sub_title_font"
            android:textStyle="bold"
            android:text="@string/safety_tools_subtitle"
            />

        <Button
            android:id="@+id/radarButton"
            style="@style/NavigateButton"
            android:text="@string/radar"
            android:layout_marginTop="@dimen/fragment_main_marginTop_20"/>
        <Button
            android:id="@+id/unwantedAttentionButton"
            style="@style/NavigateButton"
            android:text="@string/unwanted_attention_title"
            android:layout_marginTop="@dimen/fragment_main_marginTop_20"/>
        <Button
            android:id="@+id/tacticsButton"
            style="@style/NavigateButton"
            android:text="@string/predator_tactic_title"
            android:layout_marginTop="@dimen/fragment_main_marginTop_20"/>
        <Button
            android:id="@+id/bystanderButton"
            style="@style/NavigateButton"
            android:text="@string/bystander_intervention"
            android:layout_marginTop="@dimen/fragment_main_marginTop_20"/>
        <Button
            android:id="@+id/safetyPlanBasicsButton"
            style="@style/NavigateButton"
            android:text="@string/safety_plan_basics"
            android:layout_marginTop="@dimen/fragment_main_marginTop_20"/>
        <Button
            android:id="@+id/safetyPlanButton"
            style="@style/NavigateButton"
            android:text="@string/safety_plan_title"
            android:layout_marginTop="@dimen/fragment_main_marginTop_20"/>

    </LinearLayout>

</ScrollView>
