<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha" />

        <TextView
            android:id="@+id/reporting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reporting_process"
            android:textColor="@color/primary_text_default_material_dark"
            android:textSize="@dimen/title_font"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/reporting_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/reporting_process_sub"
        android:textColor="@color/primary_text_default_material_dark"
        android:textSize="@dimen/sub_title_font" />
    <Button
        android:id="@+id/reporting_steps"
        android:text="@string/reporting_steps"
        android:layout_marginTop="@dimen/homescreen_margin_first"
        android:layout_gravity="center_horizontal"
        style="@style/NavigateWrapButton" />

    <Button
        android:id="@+id/reporting_types"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/homescreen_margin"
        android:text="@string/reporting_types"
        style="@style/NavigateWrapButton" />

    <Button
        android:id="@+id/reporting_contact"
        android:layout_marginTop="@dimen/homescreen_margin"
        android:text="@string/reporting_contact"
        style="@style/NavigateWrapButton" />

    <Button
        android:id="@+id/reporting_resources"
        android:text="@string/reporting_resources"
        android:layout_marginTop="@dimen/homescreen_margin"
        style="@style/NavigateWrapButton" />

    <Button
        android:id="@+id/reporting_confidentiality"
        android:text="@string/reporting_confidentiality"
        android:layout_marginTop="@dimen/homescreen_margin"
        style="@style/NavigateWrapButton" />
    </LinearLayout>
    </ScrollView>