<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_app"
    tools:context="com.peacecorps.pcsa.safety_tools.SafetyPlanBasicsFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/primary_text_default_material_dark"
        android:textSize="@dimen/sub_title_font_22"
        android:text="@string/safety_plan_basics_subtitle" />

    <Button
        android:id="@+id/mainReasons"
        style="@style/NavigateButton"
        android:textSize="@dimen/bystander_button_textsize"
        android:text="@string/basics_main"
        android:layout_marginTop="@dimen/bystander_margin_below"
        android:layout_marginBottom="@dimen/bystander_margin_below" />
    <Button
        android:id="@+id/purposePlan"
        style="@style/NavigateButton"
        android:textSize="@dimen/bystander_button_textsize"
        android:text="@string/basics_purpose"
        android:layout_marginBottom="@dimen/bystander_margin_below"
        />
    <Button
        android:id="@+id/plansCannot"
        style="@style/NavigateButton"
        android:textSize="@dimen/bystander_button_textsize"
        android:text="@string/basics_cannot"
        android:layout_marginBottom="@dimen/bystander_margin_below" />

    <Button
        android:id="@+id/tips"
        style="@style/NavigateButton"
        android:textSize="@dimen/bystander_button_textsize"
        android:text="@string/basics_tips" />

</LinearLayout>
