<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_app"
    tools:context="com.peacecorps.pcsa.policies_glossary.PoliciesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/primary_text_default_material_dark"
            android:textSize="@dimen/sub_title_font"
            android:textStyle="bold"
            android:text="@string/policies_subtitle"
            />

        <Button
            android:id="@+id/policiesButton"
            style="@style/NavigateButton"
            android:text="@string/summary_sheet"
            android:layout_marginTop="@dimen/fragment_main_marginTop_35"/>
        <Button
            android:id="@+id/glossaryButton"
            style="@style/NavigateButton"
            android:text="@string/glossary"
            android:layout_marginTop="@dimen/fragment_main_marginTop_20"/>
        <Button
            android:id="@+id/furtherButton"
            style="@style/NavigateButton"
            android:text="@string/further_resources"
            android:layout_marginTop="@dimen/fragment_main_marginTop_20"/>

    </LinearLayout>

</ScrollView>