<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_app"
    tools:context=".MainActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/primary_text_default_material_dark"
            android:textSize="@dimen/title_font"
            android:textStyle="bold"
            android:text="@string/home_title"
            />

        <Button
            android:id="@+id/getButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:background="@drawable/bg_btn_rounded_rectangle"
            android:textColor="@color/primary_text_default_material_dark"
            android:textStyle="bold"
            android:text="@string/get_help"
            android:layout_marginTop="50dp"/>
        <Button
            android:id="@+id/circleButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:background="@drawable/bg_btn_rounded_rectangle"
            android:textColor="@color/primary_text_default_material_dark"
            android:textStyle="bold"
            android:text="@string/circle"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/reportButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:background="@drawable/bg_btn_rounded_rectangle"
            android:textColor="@color/primary_text_default_material_dark"
            android:textStyle="bold"
            android:text="@string/reporting"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/safetyResourceButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:background="@drawable/bg_btn_rounded_rectangle"
            android:textColor="@color/primary_text_default_material_dark"
            android:textStyle="bold"
            android:text="@string/safety"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/getHelpButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:background="@drawable/bg_btn_rounded_rectangle"
            android:textColor="@color/primary_text_default_material_dark"
            android:textStyle="bold"
            android:text="@string/helping_others"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</ScrollView>
