
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_app"
    tools:context="com.peacecorps.pcsa.safety_tools.BystanderInterventionFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/primary_text_default_material_dark"
        android:textSize="@dimen/sub_title_font"
        android:textStyle="bold"
        android:text="@string/bystander_intervention_subtitle"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/potentialVictim"
        style="@style/NavigateButton"
        android:textSize="@dimen/bystander_button_textsize"
        android:text="@string/bystander_potential_victim"
        android:layout_marginTop="@dimen/bystander_margin_below"
        android:layout_marginBottom="@dimen/bystander_margin_below" />
    <Button
        android:id="@+id/potentialOffender"
        style="@style/NavigateButton"
        android:textSize="@dimen/bystander_button_textsize"
        android:text="@string/bystander_potential_offender"
        android:layout_marginBottom="@dimen/bystander_margin_below"
        />
    <Button
        android:id="@+id/tacticsForBoth"
        style="@style/NavigateButton"
        android:textSize="@dimen/bystander_button_textsize"
        android:text="@string/bystander_tactics_both"
        android:layout_marginBottom="@dimen/bystander_margin_below_text" />

    <include android:id="@+id/bystander_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/textview"
         />
</LinearLayout>
