<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:background="@color/background_app"
    tools:context="com.peacecorps.pcsa.support_services.ConfidentialityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/primary_text_default_material_dark"
            android:textSize="@dimen/sub_title_font"
            android:textStyle="bold"
            android:text="@string/confidentiality_subtitle"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="45dp"
            android:textColor="@color/primary_text_default_material_dark"
            android:textSize="@dimen/center_font"
            android:textStyle="bold"
            android:text="@string/confidentiality_center_text"
            />

        <Button
            android:id="@+id/staffButton"
            style="@style/NavigateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/role_staff"
            android:layout_marginTop="@dimen/fragment_main_marginTop_35"/>
        <Button
            android:id="@+id/communityButton"
            style="@style/NavigateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/community_title"
            android:layout_marginTop="@dimen/fragment_main_marginTop_35"/>
        <Button
            android:id="@+id/assaultedButton"
            style="@style/NavigateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assaulted_title"
            android:layout_marginTop="@dimen/fragment_main_marginTop_35"/>
    </LinearLayout>
</ScrollView>
